@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -35,7 +36,6 @@ import codesquad.fineants.domain.member.domain.entity.Member;
 import codesquad.fineants.domain.member.repository.MemberRepository;
 import codesquad.fineants.domain.portfolio.domain.dto.request.PortfolioCreateRequest;
 import codesquad.fineants.domain.portfolio.domain.dto.request.PortfolioModifyRequest;
-import codesquad.fineants.domain.portfolio.domain.dto.request.PortfoliosDeleteRequest;
 import codesquad.fineants.domain.portfolio.domain.dto.response.PortFolioCreateResponse;
 import codesquad.fineants.domain.portfolio.domain.dto.response.PortfoliosResponse;
 import codesquad.fineants.domain.portfolio.domain.entity.Portfolio;
@@ -44,7 +44,7 @@ import codesquad.fineants.domain.purchasehistory.domain.entity.PurchaseHistory;
 import codesquad.fineants.domain.purchasehistory.repository.PurchaseHistoryRepository;
 import codesquad.fineants.domain.stock.domain.entity.Stock;
 import codesquad.fineants.domain.stock.repository.StockRepository;
-import codesquad.fineants.global.errors.errorcode.PortfolioErrorCode;
+import codesquad.fineants.global.errors.errorcode.MemberErrorCode;
 import codesquad.fineants.global.errors.exception.BadRequestException;
 import codesquad.fineants.global.errors.exception.ConflictException;
 import codesquad.fineants.global.errors.exception.FineAntsException;
@@ -216,6 +216,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 			PortfolioModifyRequest.class);
 		Long portfolioId = originPortfolio.getId();
 
+		setAuthentication(member);
 		// when
 		service.updatePortfolio(request, portfolioId, member.getId());
 
@@ -242,6 +243,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 			PortfolioModifyRequest.class);
 		Long portfolioId = originPortfolio.getId();
 
+		setAuthentication(member);
 		// when
 		service.updatePortfolio(request, portfolioId, member.getId());
 
@@ -277,6 +279,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 			PortfolioModifyRequest.class);
 		Long portfolioId = originPortfolio.getId();
 
+		setAuthentication(member);
 		// when
 		Throwable throwable = catchThrowable(
 			() -> service.updatePortfolio(request, portfolioId, member.getId()));
@@ -301,6 +304,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 		Long portfolioId = originPortfolio.getId();
 
 		Member hacker = memberRepository.save(createMember("hacker1234", "hack1234@naver.com"));
+		setAuthentication(hacker);
 		// when
 		Throwable throwable = catchThrowable(
 			() -> service.updatePortfolio(request, portfolioId, hacker.getId()));
@@ -308,7 +312,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 		// then
 		assertThat(throwable)
 			.isInstanceOf(ForBiddenException.class)
-			.hasMessage("포트폴리오에 대한 권한이 없습니다");
+			.hasMessage(MemberErrorCode.FORBIDDEN_MEMBER.getMessage());
 	}
 
 	@DisplayName("회원이 포트폴리오 정보 수정시 예산이 목표수익금액보다 같거나 작게 수정할 수 없다")
@@ -329,6 +333,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 			PortfolioModifyRequest.class);
 		Long portfolioId = originPortfolio.getId();
 
+		setAuthentication(member);
 		// when
 		Throwable throwable = catchThrowable(
 			() -> service.updatePortfolio(request, portfolioId, member.getId()));
@@ -357,6 +362,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 			PortfolioModifyRequest.class);
 		Long portfolioId = originPortfolio.getId();
 
+		setAuthentication(member);
 		// when
 		Throwable throwable = catchThrowable(
 			() -> service.updatePortfolio(request, portfolioId, member.getId()));
@@ -447,6 +453,7 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 		PurchaseHistory purchaseHistory = purchaseHistoryRepository.save(
 			createPurchaseHistory(null, purchaseDate, numShares, purchasePerShare, memo, portfolioHolding));
 
+		setAuthentication(member);
 		// when
 		service.deletePortfolio(portfolio.getId(), member.getId());
 
@@ -464,16 +471,17 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 	void deletePortfolio_whenDeleteOtherMemberPortfolio_thenThrowException() {
 		// given
 		Member member = memberRepository.save(createMember());
-		Member hacker = createMember("hacker");
+		Member hacker = memberRepository.save(createMember("hacker"));
 		Portfolio portfolio = portfolioRepository.save(createPortfolio(member));
 
+		setAuthentication(hacker);
 		// when
 		Throwable throwable = catchThrowable(() -> service.deletePortfolio(portfolio.getId(), hacker.getId()));
 
 		// then
 		assertThat(throwable)
 			.isInstanceOf(ForBiddenException.class)
-			.hasMessage(PortfolioErrorCode.NOT_HAVE_AUTHORIZATION.getMessage());
+			.hasMessage(MemberErrorCode.FORBIDDEN_MEMBER.getMessage());
 	}
 
 	@DisplayName("회원이 포트폴리오들을 삭제한다")
@@ -498,10 +506,10 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 			PortfolioGainHistory.empty(portfolio));
 		Portfolio portfolio2 = portfolioRepository.save(createPortfolioWithRandomName(member));
 
-		PortfoliosDeleteRequest request = new PortfoliosDeleteRequest(List.of(portfolio.getId(), portfolio2.getId()));
-
+		List<Long> portfolioIds = Arrays.asList(portfolio.getId(), portfolio2.getId());
+		setAuthentication(member);
 		// when
-		service.deletePortfolios(request, member.getId());
+		service.deletePortfolios(portfolioIds);
 
 		// then
 		assertThat(portfolioRepository.existsById(portfolio.getId())).isFalse();
@@ -517,19 +525,19 @@ class PortFolioServiceTest extends AbstractContainerBaseTest {
 	void deletePortfolios_whenDeleteOtherMemberPortfolio_thenThrowException() {
 		// given
 		Member member = memberRepository.save(createMember());
-		Member hacker = createMember("hacker");
+		Member hacker = memberRepository.save(createMember("hacker"));
 		Portfolio portfolio = portfolioRepository.save(createPortfolio(member));
 		Portfolio portfolio2 = portfolioRepository.save(createPortfolioWithRandomName(member));
+		List<Long> portfolioIds = Arrays.asList(portfolio.getId(), portfolio2.getId());
 
-		PortfoliosDeleteRequest request = new PortfoliosDeleteRequest(List.of(portfolio.getId(), portfolio2.getId()));
-
+		setAuthentication(hacker);
 		// when
-		Throwable throwable = catchThrowable(() -> service.deletePortfolios(request, hacker.getId()));
+		Throwable throwable = catchThrowable(() -> service.deletePortfolios(portfolioIds));
 
 		// then
 		assertThat(throwable)
-			.isInstanceOf(ForBiddenException.class)
-			.hasMessage(PortfolioErrorCode.NOT_HAVE_AUTHORIZATION.getMessage());
+			.isInstanceOf(FineAntsException.class)
+			.hasMessage(MemberErrorCode.FORBIDDEN_MEMBER.getMessage());
 	}
 
 	private Portfolio createPortfolioWithRandomName(Member member) {
